FieldLayout: Avoid unclickable gap between widget and label in 'inline' align
Another attempt. Previous reverted attempt was commit
3b63b22aaca7d9f577d45dd2b2caec518ba77712.

To avoid causing T178612 again, we keep the `padding-left`
on .oo-ui-fieldLayout-header, and close the unclickable gap
by offsetting the first line of text using `padding-left` on
the label and matching negative `text-indent` on its parent.

Bug: T178456

--- a/src/themes/apex/layouts.less
+++ b/src/themes/apex/layouts.less
@@ -66,6 +66,17 @@
 
 		&.oo-ui-labelElement > .oo-ui-fieldLayout-body > .oo-ui-fieldLayout-header {
 			margin: 0.25em 0 0.25em 0.5em;
+			text-indent: -1em;
+
+			> * {
+				// This property is inherited, we don't want it to apply to the help button
+				text-indent: 0;
+			}
+
+			// Avoid an unclickable gap between the widget and the label (T178456)
+			> .oo-ui-labelElement-label {
+				padding-left: 1em;
+			}
 		}
 	}
 
